package com.csl.command;

/**
 * @author MaoLongLong
 * @date 2021-03-15 14:29:12
 */
public interface Command {

    void execute();
}
