package com.csl.command;

/**
 * @author MaoLongLong
 * @date 2021-03-15 14:25:42
 */
public class Receiver {

    public void sayHello() {
        System.out.println("Hello World");
    }
}
